# latch

./: .env.example  .gitignore  PRD_WEB_FRONTEND.md  package-lock.json  package.json  pnpm-lock.yaml  setup_bundler.js
app/api/smart-account/: route.ts
app/api/smart-account/balances/: route.ts
app/api/smart-account/factory/: route.ts
app/api/smart-account/freighter/: route.ts
app/api/smart-account/setup-send-rules/: route.ts
app/api/smart-account/webauthn/: route.ts
app/api/transaction/build-delegated/: route.ts
app/api/transaction/build-execute/: route.ts
app/api/transaction/build-send/: route.ts
app/api/transaction/submit-delegated/: route.ts
app/api/transaction/submit-freighter/: route.ts
app/api/transaction/submit-webauthn/: route.ts
app/demo/: page.tsx
app/smart-accounts/: page.tsx
components/: SendCard.tsx  header.tsx  mobile-menu.tsx
components/landing/: Hero.tsx
docs/: submission.md
docs/pr-reviews/: 2026-04-10-pr1-pr2.md
docs/role-plans/: ops-company-os.md  pm.md  smart-contracts-lead.md  web-wallet-dev.md
latch-demo/contracts/freighter-ed25519-verifier/: Cargo.toml
latch-demo/contracts/freighter-ed25519-verifier/src/: lib.rs
lib/: soroban-auth-payload.ts  soroban-balances.ts  soroban-bundler.ts  soroban-context-rules.ts  soroban-recipient.ts  soroban-setup-signers.ts  soroban-transaction-build.ts  soroban-transaction-submit.ts  stellar-assets.ts  wallets-freighter.ts  wallets.ts  webauthn.ts
scripts/: test-auth-entry-signing.mjs  test-full-flow.mjs  test-send-flow.mjs
types/: stellar-base-auth.d.ts
(+1 files in other folders)
